classDiagram
    class InjectionToken {
        +resolve(IContainer, ResolveOneOptions?) T
        +args(...deps) InjectionToken~T~
        +argsFn(getArgsFn) InjectionToken~T~
        +lazy() InjectionToken~T~
    }

    class SingleToken {
        +token: string | symbol
        +resolve(IContainer) T
        +bindTo(IRegistration) void
        +args(...args) SingleToken~T~
        +argsFn(getArgsFn) SingleToken~T~
        +lazy() SingleToken~T~
    }

    class GroupAliasToken {
        +token: string | symbol
        +resolve(IContainer) T[]
        +bindTo(IRegistration) void
        +args(...args) GroupAliasToken~T~
        +argsFn(getArgsFn) GroupAliasToken~T~
        +lazy() InjectionToken~T[]~
    }

    class SingleAliasToken {
        +token: string | symbol
        +resolve(IContainer) T
        +bindTo(IRegistration) void
        +args(...args) InjectionToken~T~
        +argsFn(getArgsFn) InjectionToken~T~
        +lazy() InjectionToken~T~
    }

    InjectionToken <|-- SingleToken
    InjectionToken <|-- GroupAliasToken
    InjectionToken <|-- SingleAliasToken

    note for GroupAliasToken "Resolves to array of T\nSupports alias grouping"
    note for SingleAliasToken "Resolves to single T\nSupports alias grouping"

